<?xml version="1.0"?>
<package format="2">
  <name>zbar_opencv_ros2</name>
  <version>1.0.0</version>
  <description>The zbar_opencv_ros2 package</description>
  <maintainer email="tp6u4jo6@gmail.com">Wenjiu</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
